choix size vm